# moneygraph-demo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile
db/init/: 001_schema.sql  002_seed.sql
docs/: ARCHITECTURE.md
evals/: README.md  dataset.jsonl  run_eval.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: EventPanel.jsx  FilterBar.jsx  Header.jsx  Legend.jsx  NodePanel.jsx  PriceChart.jsx  TabBar.jsx  TierBadge.jsx  Tooltip.jsx  formatters.js  theme.js
frontend/src/views/: GraphView.jsx  NewsView.jsx  NodesView.jsx  ReviewQueueView.jsx  RunsView.jsx  SettingsView.jsx
scripts/: backup.sh  restore.sh
src/moneygraph/: __init__.py  cli.py  db.py  pipeline.py
src/moneygraph/api/: common.py  main.py  scheduler.py
src/moneygraph/api/routers/: candidates.py  graph.py  nodes.py  pipeline.py  settings.py
src/moneygraph/core/: __init__.py  enrichment.py  reresolve.py  resolve.py  stockprice.py  syndicate.py  ticker_lookup.py
src/moneygraph/ingest/: __init__.py  edgar.py
src/moneygraph/ingest/extraction/: __init__.py  backend.py  (+7 more)
tests/: conftest.py  test_acquisition_demotion.py  test_approve.py  test_dark_horse_promotion.py  test_enrichment.py  test_link.py  test_nodes.py  test_realtime.py  test_reresolve.py  test_resolve.py  test_run_progress.py  test_scheduler.py  test_search_provider.py  test_stockprice.py  test_syndicate.py  test_syndicate_cross_source.py  test_ticker_lookup.py  test_websearch.py
